--- a/assets/front/assets/css/style.css
+++ b/assets/front/assets/css/style.css
@@ -411,8 +411,8 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 35vh;
-  background: url("../img/events-3.jpg") top center;
+  height: 40vh;
+  background: url("../img/events.jpg") top center;
   background-size: cover;
   position: relative;
 }
