--- a/assets/front/assets/css/style.css
+++ b/assets/front/assets/css/style.css
@@ -411,15 +411,15 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 50vh;
-  background: url("../img/events.jpg") top center;
+  height: 40vh;
+  background: url("../img/hero.jpg") top center;
   background-size: cover;
   position: relative;
 }
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.4);
+  background:rgba(214, 210, 228, 0.4);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -447,8 +447,8 @@ h6 {
 }
 
 #hero h2 {
-  color: #eee;
-  margin: -60px 0 0 0;
+  color: #005CAA;
+  margin: -70px 0 0 0;
   font-size: 24px;
 }
 
