--- a/public/assets/front/assets/css/style.css
+++ b/public/assets/front/assets/css/style.css
@@ -496,8 +496,9 @@ h6 {
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
+/* default padding 60px*/
 section {
-  padding: 60px 0;
+  padding: 30px 0;
   overflow: hidden;
 }
 
@@ -506,7 +507,7 @@ section {
 }
 
 .section-title {
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 
 .section-title h2 {
@@ -541,8 +542,8 @@ section {
 }
 
 .breadcrumbs {
-  margin-top: 23px;
-  text-align: center;
+  margin-top: 30px;
+  text-align: left;
   background: #005CAA;
   padding: 30px 0;
   color: #fff;
@@ -555,7 +556,7 @@ section {
 }
 
 .breadcrumbs h2 {
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 500;
 }
 
